--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,8 @@ jobs:
             - uses: actions/checkout@v2
               with:
                   fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+            - name: Setup Node.js environment
+              uses: actions/setup-node@v2.4.0
             - run: npm test
               env:
                   CI: true
