--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,6 +95,9 @@ jobs:
     build_ui:
         name: Build UI
         runs-on: ubuntu-latest
+        defaults:
+            run:
+                working-directory: UI/zip-it
         needs: files_changed
         if: needs.files_changed.outputs.ui_changes == 'true'
         steps:
@@ -103,7 +106,6 @@ jobs:
                   fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
             - name: Setup Node.js environment
               uses: actions/setup-node@v2.4.0
+            - run: npm ci
+            - run: npm run build --if-present
             - run: npm test
-              env:
-                  CI: true
-              working-directory: ./UI/zip-it/
