--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,6 +95,9 @@ jobs:
     build_ui:
         name: Build UI
         runs-on: ubuntu-latest
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         defaults:
             run:
                 working-directory: UI/zip-it
@@ -109,3 +112,12 @@ jobs:
             - run: npm ci
             - run: npm run build --if-present
             - run: npm test
+            - name: UI deploy
+              uses: reggionick/s3-deploy@v3
+              with:
+                  folder: build
+                  bucket: ${{ secrets.S3_BUCKET }}
+                  bucket-region: ap-southeast-2
+                  dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+                  delete-removed: true
+                  invalidation: /
