--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,11 +93,6 @@ jobs:
                   cluster: ${{ secrets.ECS_CLUSTER }}
                   wait-for-service-stability: false
     build_ui:
-        name: Build UI
-        runs-on: ubuntu-latest
-        env:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         defaults:
             run:
                 working-directory: UI/zip-it
@@ -112,6 +107,26 @@ jobs:
             - run: npm ci
             - run: npm run build --if-present
             - run: npm test
+            - name: Upload UI
+              uses: actions/upload-artifact@v2
+              with: 
+                name: UI
+                path: UI/zip-it/build/**/*
+    deploy_api:
+        name: Build UI
+        runs-on: ubuntu-latest
+        needs: build_ui
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        steps:
+            - name: Download UI
+              uses: actions/download-artifact@v2
+              with:
+                name: UI
+                path: build
+            - name: Install dependencies
+              run: yarn
             - name: UI deploy
               uses: reggionick/s3-deploy@v3
               with:
