--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,20 +118,30 @@ jobs:
         name: Deploy UI
         runs-on: ubuntu-latest
         needs: build_ui
-        env:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         steps:
             - name: Download UI
               uses: actions/download-artifact@v2
               with:
                 name: UI
                 path: build
-            - name: Install dependencies
-              run: yarn
-            - name: UI deploy
-              uses: reggionick/s3-deploy@v3
+            - name: Configure AWS credentials
+              uses: aws-actions/configure-aws-credentials@v1
               with:
-                  folder: build
-                  bucket: ${{ secrets.S3_BUCKET }}
-                  bucket-region: ap-southeast-2
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+            - name: Deploy to S3
+              run: aws s3 sync . s3://${{ secrets.S3_BUCKET }}
+              working-directory: build
+
+            - name: UI deploy
+              uses: jeanlescure/react-deploy-to-s3-action@main
+              with:
+                args: --acl public-read --follow-symlinks --delete
+              env:
+                AWS_S3_BUCKET: ${{ secrets.S3_BUCKET }}
+                AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+                AWS_REGION: ap-southeast-2
+                SOURCE_DIR: build
