--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,15 +133,5 @@ jobs:
             - name: Deploy to S3
               run: aws s3 sync . s3://${{ secrets.S3_BUCKET }}
               working-directory: build
-
-            - name: UI deploy
-              uses: jeanlescure/react-deploy-to-s3-action@main
-              with:
-                args: --acl public-read --follow-symlinks --delete
-              env:
-                AWS_S3_BUCKET: ${{ secrets.S3_BUCKET }}
-                AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
-                AWS_REGION: ap-southeast-2
-                SOURCE_DIR: build
+            - name: Invalidate CloudFront cache
+              run: cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
