--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,4 +134,4 @@ jobs:
               run: aws s3 sync . s3://${{ secrets.S3_BUCKET }}
               working-directory: build
             - name: Invalidate CloudFront cache
-              run: cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+              run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
