--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
         name: Deploy API
         runs-on: ubuntu-latest
         needs: build_api
-        if: github.ref == 'refs/heads/main'
+        #if: github.ref == 'refs/heads/main'
         steps:
             - uses: actions/checkout@v2
             - name: Configure AWS credentials
