--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,6 +87,8 @@ jobs:
               run: echo "$(jq ".containerDefinitions[0].environment[0].value=\"${{ secrets.NEW_RELIC_LICENCE_KEY }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
             - name: Update CORS URLs
               run: echo "$(jq ".containerDefinitions[0].environment[1].value=\"${{ secrets.CORS_URLS }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
+            - name: Cat out task-definition.json
+              run: cat ./Iac/ECS/task-definition.json
             - name: Deploy Amazon ECS task definition
               uses: aws-actions/amazon-ecs-deploy-task-definition@v1
               with:
@@ -117,7 +119,7 @@ jobs:
                 name: UI
                 path: UI/zip-it/build/**/*
     deploy_ui:
-        name: Deploy UI
+        name: Deploy UI Blue
         runs-on: ubuntu-latest
         needs: build_ui
         steps:
