--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
         name: Deploy API
         runs-on: ubuntu-latest
         needs: build_api
-        #if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
         steps:
             - uses: actions/checkout@v2
             - name: Configure AWS credentials
@@ -87,8 +87,6 @@ jobs:
               run: echo "$(jq ".containerDefinitions[0].environment[0].value=\"${{ secrets.NEW_RELIC_LICENCE_KEY }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
             - name: Update CORS URLs
               run: echo "$(jq ".containerDefinitions[0].environment[1].value=\"${{ secrets.CORS_URLS }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
-            - name: Cat out task-definition.json
-              run: cat ./IaC/ECS/task-definition.json
             - name: Deploy Amazon ECS task definition
               uses: aws-actions/amazon-ecs-deploy-task-definition@v1
               with:
@@ -115,25 +113,26 @@ jobs:
             - run: npm test
             - name: Upload UI
               uses: actions/upload-artifact@v2
-              with: 
-                name: UI
-                path: UI/zip-it/build/**/*
+              with:
+                  name: UI
+                  path: UI/zip-it/build/**/*
     deploy_ui:
         name: Deploy UI Blue
         runs-on: ubuntu-latest
         needs: build_ui
+        if: github.ref == 'refs/heads/main'
         steps:
             - name: Download UI
               uses: actions/download-artifact@v2
               with:
-                name: UI
-                path: build
+                  name: UI
+                  path: build
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v1
               with:
-                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
             - name: Deploy to S3
               run: aws s3 sync . s3://${{ secrets.S3_BUCKET }}
               working-directory: build
