--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,3 +138,11 @@ jobs:
               working-directory: build
             - name: Invalidate CloudFront cache
               run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+    finalise:
+      name: Finalise
+      runs-on: ubuntu-latest
+      if: always()
+      needs: [build_ui, deploy_ui, build_api, deploy_api]
+      - name: Invalidate pipeline
+        if: ${{ needs.build_ui.status }} == failure() || ${{ needs.deploy_ui.status }} == failure() || ${{ needs.build_api.status }} == failure() || ${{ needs.deploy_api.status }} == failure()
+        run: exit 1
