--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         name: Build API
         runs-on: ubuntu-latest
         needs: files_changed
-        if: needs.files_changed.outputs.api_changes == 'true'
+        if: needs.files_changed.outputs.api_changes == 'true' && 1 == 2
         outputs:
             digest: ${{ steps.docker_build.outputs.digest }}
         steps:
@@ -101,7 +101,7 @@ jobs:
             run:
                 working-directory: UI/zip-it
         needs: files_changed
-        if: needs.files_changed.outputs.ui_changes == 'true'
+        if: needs.files_changed.outputs.ui_changes == 'true' && 1 == 2
         steps:
             - uses: actions/checkout@v2
               with:
