--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -146,4 +146,6 @@ jobs:
       steps:
       - name: Invalidate pipeline
         if: ${{ needs.build_ui.status }} == failure() || ${{ needs.deploy_ui.status }} == failure() || ${{ needs.build_api.status }} == failure() || ${{ needs.deploy_api.status }} == failure()
-        run: exit 1
+        run: |
+            echo ${{ needs.build_ui.status }}
+            exit 1
