--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
         needs: files_changed
         if: needs.files_changed.outputs.api_changes == 'true' && 1 == 2
         outputs:
+            status: ${{ job.status }}
             digest: ${{ steps.docker_build.outputs.digest }}
         steps:
             - uses: actions/checkout@v2
@@ -73,6 +74,8 @@ jobs:
         runs-on: ubuntu-latest
         needs: build_api
         if: github.ref == 'refs/heads/main'
+        outputs:
+            status: ${{ job.status }}
         steps:
             - uses: actions/checkout@v2
             - name: Configure AWS credentials
@@ -97,6 +100,8 @@ jobs:
     build_ui:
         name: Build UI
         runs-on: ubuntu-latest
+        outputs:
+            status: ${{ job.status }}
         defaults:
             run:
                 working-directory: UI/zip-it
@@ -120,6 +125,8 @@ jobs:
         name: Deploy UI Blue
         runs-on: ubuntu-latest
         needs: build_ui
+        outputs:
+            status: ${{ job.status }}
         if: github.ref == 'refs/heads/main'
         steps:
             - name: Download UI
@@ -145,7 +152,7 @@ jobs:
       needs: [build_ui, deploy_ui, build_api, deploy_api]
       steps:
       - name: Invalidate pipeline
-        if: ${{ needs.build_ui.status }} == failure() || ${{ needs.deploy_ui.status }} == failure() || ${{ needs.build_api.status }} == failure() || ${{ needs.deploy_api.status }} == failure()
+        if: ${{ needs.build_ui.outputs.status }} == failure() || ${{ needs.deploy_ui.outputs.status }} == failure() || ${{ needs.build_api.outputs.status }} == failure() || ${{ needs.deploy_api.outputs.status }} == failure()
         run: |
-            echo ${{ needs.build_ui.status }}
+            echo ${{ needs.build_ui.outputs.status }}
             exit 1
