--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,6 @@ jobs:
         name: Check changes
         runs-on: ubuntu-latest
         outputs:
-            result: ${{ job.status }}
             api_changes: ${{ steps.changes.outputs.api_changes }}
             ui_changes: ${{ steps.changes.outputs.ui_changes }}
         steps:
@@ -19,17 +18,13 @@ jobs:
                         - Dockerfile
                       ui_changes:
                         - 'UI/**'
-            - id: result
-              if: always()
-              run: |
-                echo "::set-output name=result::${{ job.status }}"
     build_api:
         name: Build API
         runs-on: ubuntu-latest
         needs: files_changed
         if: needs.files_changed.outputs.api_changes == 'true' && 1 == 2
         outputs:
-            status: ${{ job.status }}
+            result: ${{ job.status }}
             digest: ${{ steps.docker_build.outputs.digest }}
         steps:
             - uses: actions/checkout@v2
@@ -80,7 +75,7 @@ jobs:
         needs: build_api
         if: github.ref == 'refs/heads/main'
         outputs:
-            status: ${{ job.status }}
+            result: ${{ job.status }}
         steps:
             - uses: actions/checkout@v2
             - name: Configure AWS credentials
@@ -106,7 +101,7 @@ jobs:
         name: Build UI
         runs-on: ubuntu-latest
         outputs:
-            status: ${{ job.status }}
+            result: ${{ job.status }}
         defaults:
             run:
                 working-directory: UI/zip-it
@@ -131,7 +126,7 @@ jobs:
         runs-on: ubuntu-latest
         needs: build_ui
         outputs:
-            status: ${{ job.status }}
+            result: ${{ job.status }}
         if: github.ref == 'refs/heads/main'
         steps:
             - name: Download UI
@@ -154,10 +149,10 @@ jobs:
       name: Finalise
       runs-on: ubuntu-latest
       if: always()
-      needs: [files_changed, build_ui, deploy_ui, build_api, deploy_api]
+      needs: [build_ui, deploy_ui, build_api, deploy_api]
       steps:
       - name: Invalidate pipeline
-        if: ${{ needs.build_ui.outputs.status }} == failure() || ${{ needs.deploy_ui.outputs.status }} == failure() || ${{ needs.build_api.outputs.status }} == failure() || ${{ needs.deploy_api.outputs.status }} == failure()
+        if: ${{ needs.build_ui.outputs.result }} == failure() || ${{ needs.deploy_ui.outputs.result }} == failure() || ${{ needs.build_api.outputs.result }} == failure() || ${{ needs.deploy_api.outputs.result }} == failure()
         run: |
-            echo ${{ needs.files_changed.outputs.result }}
+            echo ${{ needs.build_ui.outputs.result }}
             exit 1
