--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,7 +152,6 @@ jobs:
       needs: [build_ui, deploy_ui, build_api, deploy_api]
       steps:
       - name: Invalidate pipeline
-        if: ${{ needs.build_ui.outputs.result }} == failure() || ${{ needs.deploy_ui.outputs.result }} == failure() || ${{ needs.build_api.outputs.result }} == failure() || ${{ needs.deploy_api.outputs.result }} == failure()
+        if: ${{ needs.build_ui.outputs.result }} == "failure"  || ${{ needs.deploy_ui.outputs.result }} == "failure" || ${{ needs.build_api.outputs.result }} == "failure" || ${{ needs.deploy_api.outputs.result }} == "failure"
         run: |
-            echo ${{ needs.build_ui.outputs.result }}
             exit 1
