--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         name: Build API
         runs-on: ubuntu-latest
         needs: files_changed
-        if: needs.files_changed.outputs.api_changes == 'true' && 1 == 2
+        if: needs.files_changed.outputs.api_changes == 'true'
         outputs:
             result: ${{ job.status }}
             digest: ${{ steps.docker_build.outputs.digest }}
@@ -106,7 +106,7 @@ jobs:
             run:
                 working-directory: UI/zip-it
         needs: files_changed
-        if: needs.files_changed.outputs.ui_changes == 'true' && 1 == 2
+        if: needs.files_changed.outputs.ui_changes == 'true'
         steps:
             - uses: actions/checkout@v2
               with:
