--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="11.3.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     <PackageReference Include="NewRelic.Agent" Version="9.0.0" />
     <PackageReference Include="Sentry.AspNetCore" Version="3.9.2" />
     <PackageReference Include="Sentry.NLog" Version="3.9.2" />
@@ -18,6 +20,9 @@
     <PackageReference Include="NLog" Version="4.7.11" />
     <PackageReference Include="NewRelic.LogEnrichers.NLog" Version="1.2.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
+    <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
+    <PackageReference Include="System.Security.Cryptography.Csp" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
