--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -18,6 +18,7 @@
     "graphql": "15.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-lorem-ipsum": "^1.4.9",
     "react-scripts": "4.0.3",
     "typescript": "4.4.3",
     "web-vitals": "2.1.0"
