--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "3.4.13",
+    "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "1.6.8",
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
@@ -18,6 +19,7 @@
     "graphql": "15.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-lorem-ipsum": "^1.4.9",
     "react-scripts": "4.0.3",
     "typescript": "4.4.3",
