--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="11.3.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="NewRelic.Agent" Version="9.0.0" />
     <PackageReference Include="Sentry.AspNetCore" Version="3.9.3" />
     <PackageReference Include="Sentry.NLog" Version="3.9.3" />
