--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Build
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    types: [opened, synchronize, reopened]
+    push:
+        branches:
+            - master
+    pull_request:
+        types: [opened, synchronize, reopened]
 jobs:
     files_changed:
         name: Check changes
@@ -23,6 +23,54 @@ jobs:
                         - Dockerfile
                       ui_changes:
                         - 'UI/**'
+    sonar_scan:
+        name: SonarCloud Scan
+        runs-on: ubuntu-latest
+        if: needs.files_changed.outputs.api_changes == 'true'
+        outputs:
+            result: ${{ job.status }}
+        steps:
+            - name: Set up JDK 11
+              uses: actions/setup-java@v1
+              with:
+                  java-version: 1.11
+            - uses: actions/checkout@v2
+              with:
+                  fetch-depth: 0
+            - name: Cache SonarCloud packages
+              uses: actions/cache@v1
+              with:
+                  path: ~/sonar/cache
+                  key: ${{ runner.os }}-sonar
+                  restore-keys: ${{ runner.os }}-sonar
+            - name: Cache SonarCloud scanner
+              id: cache-sonar-scanner
+              uses: actions/cache@v1
+              with:
+                  path: ./.sonar/scanner
+                  key: ${{ runner.os }}-sonar-scanner
+                  restore-keys: ${{ runner.os }}-sonar-scanner
+            - name: Install SonarCloud scanner
+              if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+              run: |
+                  if [ ! -d /.sonar/scanner ]; then mkdir -p /.sonar/scanner; fi 
+                  dotnet tool update dotnet-sonarscanner --tool-path /.sonar/scanner
+            - name: Build and analyze
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              shell: powershell
+              run: |
+                  .\.sonar\scanner\dotnet-sonarscanner begin /k:"COSC2650_Assignment" /o:"cosc2650" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.coverage.exclusions="API/Program.cs","API/Startup.cs"
+
+                  if [ "$GITHUB_REF" = "refs/heads/main" ]; then configuration="Release"; else configuration="Debug"; fi
+
+                  dotnet clean ./API.sln
+                  dotnet build ./API.sln -c "$configuration"
+                  dotnet test ./API.sln -c "$configuration" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+                  dotnet publish ./API/API.csproj -c "$configuration" -o out
+
+                  .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
     build_api:
         name: Build API
         runs-on: ubuntu-latest
@@ -33,8 +81,6 @@ jobs:
             digest: ${{ steps.docker_build.outputs.digest }}
         steps:
             - uses: actions/checkout@v2
-              with:
-                  fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
             - name: Docker meta
               id: meta
               uses: docker/metadata-action@v3
@@ -61,8 +107,6 @@ jobs:
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
                   build-args: |
-                      GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}]
-                      SONAR_TOKEN=${{ secrets.SONAR_TOKEN }}
                       GITHUB_REF=${{ github.ref }}
             - name: Create a Sentry.io release
               uses: getsentry/action-release@v1
@@ -154,9 +198,9 @@ jobs:
         name: Finalise
         runs-on: ubuntu-latest
         if: always()
-        needs: [build_ui, deploy_ui, build_api, deploy_api]
+        needs: [build_ui, deploy_ui, build_api, deploy_api, sonar_scan]
         steps:
             - name: Invalidate pipeline
-              if: ${{ needs.build_ui.outputs.result == 'failure' || needs.deploy_ui.outputs.result == 'failure' || needs.build_api.outputs.result == 'failure' || needs.deploy_api.outputs.result == 'failure' }}
+              if: ${{ needs.sonar_scan.outputs.result == 'failure' || needs.build_ui.outputs.result == 'failure' || needs.deploy_ui.outputs.result == 'failure' || needs.build_api.outputs.result == 'failure' || needs.deploy_api.outputs.result == 'failure' }}
               run: |
                   exit 1
