--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
                       ui_changes:
                         - 'UI/**'
     sonar_scan:
-        name: SonarCloud Scan
+        name: Build and SonarCloud Scan
         runs-on: ubuntu-latest
         needs: files_changed
         if: needs.files_changed.outputs.api_changes == 'true'
@@ -71,15 +71,25 @@ jobs:
                   dotnet publish ./API/API/API.csproj -c "$configuration" -o out
 
                   ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+            - name: Upload UI
+              uses: actions/upload-artifact@v2
+              with:
+                  name: API
+                  path: ./out/**/*
     build_api:
         name: Build API
         runs-on: ubuntu-latest
-        needs: files_changed
+        needs: sonar_scan
         if: needs.files_changed.outputs.api_changes == 'true'
         outputs:
             result: ${{ job.status }}
             digest: ${{ steps.docker_build.outputs.digest }}
         steps:
+            - name: Download UI
+              uses: actions/download-artifact@v2
+              with:
+                  name: API
+                  path: ./out
             - uses: actions/checkout@v2
             - name: Docker meta
               id: meta
