--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,8 +76,8 @@ jobs:
               with:
                   name: API
                   path: |
-                    ./out/**/*
-                    Dockerfile
+                      ./out/**/*
+                      Dockerfile
     build_api:
         name: Build API
         runs-on: ubuntu-latest
@@ -119,21 +119,11 @@ jobs:
                   labels: ${{ steps.meta.outputs.labels }}
                   build-args: |
                       GITHUB_REF=${{ github.ref }}
-            - name: Create a Sentry.io release
-              uses: getsentry/action-release@v1
-              env:
-                  SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-                  SENTRY_ORG: cosc2650
-                  SENTRY_PROJECT: assignment
-              with:
-                  version: ${{ github.sha }}
-                  environment: "Production"
-                  ignore_empty: true
     deploy_api:
         name: Deploy API
         runs-on: ubuntu-latest
         needs: build_api
-        if: github.ref == 'refs/heads/main'
+        #if: github.ref == 'refs/heads/main'
         outputs:
             result: ${{ job.status }}
         steps:
@@ -157,6 +147,16 @@ jobs:
                   service: ${{ secrets.ECS_SERVICE }}
                   cluster: ${{ secrets.ECS_CLUSTER }}
                   wait-for-service-stability: false
+            - name: Create a Sentry.io release
+              uses: getsentry/action-release@v1
+              env:
+                  SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+                  SENTRY_ORG: cosc2650
+                  SENTRY_PROJECT: assignment
+              with:
+                  version: ${{ github.sha }}
+                  environment: "Production"
+                  ignore_empty: true
     build_ui:
         name: Build UI
         runs-on: ubuntu-latest
