--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,7 +123,7 @@ jobs:
         name: Deploy API
         runs-on: ubuntu-latest
         needs: build_api
-        #if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
         outputs:
             result: ${{ job.status }}
         steps:
