--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -12,16 +12,16 @@
     "@testing-library/react": "12.1.1",
     "@testing-library/user-event": "13.2.1",
     "@types/jest": "27.0.2",
-    "@types/node": "16.10.2",
+    "@types/node": "14.17.20",
     "@types/react": "17.0.26",
     "@types/react-dom": "17.0.9",
     "framer-motion": "4.1.17",
     "graphql": "15.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "4.3.0",
+    "react-icons": "4.2.0",
     "react-lorem-ipsum": "1.4.9",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "4.0.3",
     "typescript": "4.4.3",
     "web-vitals": "2.1.0"
   },
