--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -1,56 +1,56 @@
 {
-  "name": "zip-it",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@apollo/client": "3.4.15",
-    "@chakra-ui/icons": "1.0.15",
-    "@chakra-ui/react": "1.6.8",
-    "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.1.1",
-    "@testing-library/user-event": "13.2.1",
-    "@types/jest": "27.0.2",
-    "@types/node": "14.17.20",
-    "@types/react": "17.0.26",
-    "@types/react-dom": "17.0.9",
-    "framer-motion": "4.1.17",
-    "graphql": "15.6.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "4.2.0",
-    "react-lorem-ipsum": "1.4.9",
-    "react-scripts": "4.0.3",
-    "typescript": "4.4.3",
-    "web-vitals": "2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
-    "enzyme": "^3.11.0"
-  }
+    "name": "zip-it",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@apollo/client": "3.4.15",
+        "@chakra-ui/icons": "1.0.15",
+        "@chakra-ui/react": "1.6.8",
+        "@emotion/react": "11.4.1",
+        "@emotion/styled": "11.3.0",
+        "@testing-library/jest-dom": "5.14.1",
+        "@testing-library/react": "12.1.1",
+        "@testing-library/user-event": "13.2.1",
+        "@types/jest": "27.0.2",
+        "@types/node": "14.17.20",
+        "@types/react": "17.0.26",
+        "@types/react-dom": "17.0.9",
+        "framer-motion": "4.1.17",
+        "graphql": "15.6.0",
+        "react": "16.14.0",
+        "react-dom": "16.14.0",
+        "react-icons": "4.2.0",
+        "react-lorem-ipsum": "1.4.9",
+        "react-scripts": "4.0.3",
+        "typescript": "4.4.3",
+        "web-vitals": "2.1.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.6"
+    }
 }
