--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -5,22 +5,23 @@
     "dependencies": {
         "@apollo/client": "3.4.15",
         "@chakra-ui/icons": "1.0.15",
+        "@chakra-ui/layout": "^1.4.9",
         "@chakra-ui/react": "1.6.8",
+        "@chakra-ui/react-utils": "^1.1.2",
         "@emotion/react": "11.4.1",
         "@emotion/styled": "11.3.0",
-        "@testing-library/jest-dom": "5.14.1",
+        "@jest/globals": "^27.2.4",
         "@testing-library/react": "12.1.1",
-        "@testing-library/user-event": "13.2.1",
         "@types/jest": "27.0.2",
-        "@types/node": "14.17.20",
+        "@types/node": "^16.10.2",
         "@types/react": "17.0.26",
         "@types/react-dom": "17.0.9",
+        "eslint-config-react-app": "^6.0.0",
         "framer-motion": "4.1.17",
         "graphql": "15.6.0",
         "react": "16.14.0",
         "react-dom": "16.14.0",
-        "react-icons": "4.2.0",
-        "react-lorem-ipsum": "1.4.9",
+        "react-icons": "^4.2.0",
         "react-scripts": "4.0.3",
         "typescript": "4.4.3",
         "web-vitals": "2.1.0"
