--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -19,8 +19,8 @@
         "eslint-config-react-app": "^6.0.0",
         "framer-motion": "4.1.17",
         "graphql": "15.6.0",
-        "react": "16.14.0",
-        "react-dom": "16.14.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
         "react-scripts": "4.0.3",
         "typescript": "4.4.3",
@@ -51,7 +51,7 @@
         ]
     },
     "devDependencies": {
-        "enzyme": "3.11.0",
-        "enzyme-adapter-react-16": "1.15.6"
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+        "enzyme": "3.11.0"
     }
 }
